--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -11,12 +11,17 @@
     <div class="panel panel-default">
         <h4>BROWNFIELD</h4>
         <div class="panel-body">
-            <p><a href="~/Gadata/PloegRapportWebgrid" class="btn btn-primary btn-sm">PloegRapport &raquo;</a> 
-            Bevat storingen groter dan 20 minuten of die meer dan 3 keer zijn voorgevallen</p>
-            <p><a href="~/Gadata/SupervisieWebgrid" class="btn btn-primary btn-sm">Supervisie Robots &raquo;</a>
-            Bevat alles dat nu in storing staat, storingen die langer dan 10 minuten hebben geduurd en hardwarefouten van robots</p>
-            <p><a href="~/Home/Rendersite?url=http://webapps.gen.volvocars.net/applications/eng/equipment/supervisiep1/intranet/" class="btn btn-primary btn-sm">Supervisie Intranet P1 &raquo;</a>
-            Supervisie intranet
+            <p>
+                <a href="~/Gadata/PloegRapportWebgrid" class="btn btn-primary btn-sm">PloegRapport &raquo;</a>
+                Bevat storingen groter dan 20 minuten of die meer dan 3 keer zijn voorgevallen
+            </p>
+            <p>
+                <a href="~/Gadata/SupervisieWebgrid" class="btn btn-primary btn-sm">Supervisie Robots &raquo;</a>
+                Bevat alles dat nu in storing staat, storingen die langer dan 10 minuten hebben geduurd en hardwarefouten van robots
+            </p>
+            <p>
+                <a href="~/Home/Rendersite?url=http://webapps.gen.volvocars.net/applications/eng/equipment/supervisiep1/intranet/" class="btn btn-primary btn-sm">Supervisie Intranet P1 &raquo;</a>
+                Supervisie intranet
             </p>
         </div>
     </div>
@@ -26,10 +31,14 @@
     <div class="panel panel-default">
         <h4>GREENFIELD</h4>
         <div class="panel-body">
-            <p><a href="~/NgacElectrode/CurrentTipstatus" class="btn btn-primary btn-sm">Tipstatus &raquo;</a>
-            Huidige elektrode status inclusief een voorspelling van het aantal nog te lassen wagens</p>
-            <p><a href="~/Gadata/Stowebgrid" class="btn btn-primary btn-sm">STO &raquo;</a>
-            Data van de PLC actieve storingen</p>
+            <p>
+                <a href="~/NgacElectrode/index" class="btn btn-primary btn-sm">Electrode &raquo;</a>
+                Alles in verband met de Electrode
+            </p>
+            <p>
+                <a href="~/Gadata/Stowebgrid" class="btn btn-primary btn-sm">STO &raquo;</a>
+                Data van de PLC actieve storingen
+            </p>
 
         </div>
     </div>
@@ -58,6 +67,17 @@
         </div>
     </div>
 
+    <p></p>
+
+    <div class="panel panel-default">
+        <h4>Maximo</h4>
+        <div class="panel-body">
+            <p>
+                <a href="~/Maximo/index" class="btn btn-primary btn-sm">Maximo &raquo;</a>
+                Alles in verband met maximo
+            </p>
+        </div>
+    </div>
 
     <p></p>
 
@@ -65,21 +85,13 @@
         <h4>Please don't touch</h4>
         <div class="panel-body">
             <p>
-                <a href="~/Difftable/Index" class="btn btn-primary btn-sm">QueryDiffer &raquo;</a>
-            Concept om data van maximo op verschillende tijdstippen te vergelijken</p>
-            <p>
                 <a href="~/Dynamic/DynamicWebgrid" class="btn btn-primary btn-sm">Dynamic &raquo;</a>
-            Test met niet gebufferde query
+                Test met niet gebufferde query
             </p>
             <p>
                 <a href="~/Sharepoint/AddNewIusse?location=TestLocation&title=TestTitle&refURL=http://MyServer/sites/MySiteCollection" class="btn btn-primary btn-sm">SharepointTest &raquo;</a>
-            Test communicatie naar sharepoint.
+                Test communicatie naar sharepoint.
             </p>
-            <p>
-                <a href="~/NgacElectrode/index" class="btn btn-primary btn-sm">Electrode &raquo;</a>
-                Electrode index
-            </p>
-
         </div>
     </div>
 
