--- a/EqUiWebUi/Views/NgacElectrode/PlanTipChange.cshtml
+++ b/EqUiWebUi/Views/NgacElectrode/PlanTipChange.cshtml
@@ -11,100 +11,100 @@
         </div>
 
         <div class="panel-body">
-                    @*plan false
-                    gebruiker geeft in het formulier waar en met welke voorwaardes hij elektrodes wil wisselen*@
-                 <div class="panel panel-default">
+            @*plan false
+                gebruiker geeft in het formulier waar en met welke voorwaardes hij elektrodes wil wisselen*@
+            <div class="panel panel-default">
 
-                        <div class="panel-heading">
-                            <h4>Plan het onderhoud</h4>
-                        </div>
+                <div class="panel-heading">
+                    <h4>Plan het onderhoud</h4>
+                </div>
 
-                        <div class="panel-body">
+                <div class="panel-body">
 
-                            <div class="row">
-                                    <div class="col-sm-5">
-                                        <label class="control-label col-sm-4"" for="location">Op locatie</label>
-                                        <div class="col-sm-8">
-                                           @MyFilters.LocationDropdown("location")
-                                        </div>
-                                    </div>
-                                </div>
-
-                             @*sam snapt het niet....*@
-                            <div class="row"><a>.</a></div>    
-
-                            <div class="row">
-                                    <div class="col-sm-5">
-                                        <label class="control-label col-sm-8" for="minwear">waar de wear groter is dan</label>
-                                        <div class="col-sm-4">
-                                            <input class="form-control input-sm" type="number" min="0" max="100" step="5" value="25" id="minwear" />
-                                        </div>
-                                    </div>
-
-                                    <div class="col-sm-7" >
-                                        <label class="control-label col-sm-8" for="minparts">of minimum resterende stukken kleiner dan</label>
-                                        <div class="col-sm-4">
-                                            <input class="form-control input-sm" type="number" min="0" step="10" value="200" id="minparts" />
-                                        </div>
-                                    </div>
-                               </div>
-                        </div>
-
-                        <div class="panel-footer">
-                            <button class="btn-sm btn-primary" id="loadLocations">Zoek</button>
-                        </div>
-                 </div>
-                @****************************************************************************************************************************@
-
-                @*DO Hier word de lijst getoond met waar er moet gewisselde worden*@
-                <div class="panel panel-default" id="tipsToChangeContainer" style="display:none">
-
-                    <div class="panel-heading">
-                        <div class="row">
-                            <h4 class="col-sm-6">Deze robots moeten gewisseld worden.</h4>
-                            <div class="col-sm-3" style="float:right">
-                              <input class="form-control input-sm" type="datetime-local" id="changeStartlistDatepicker" />
+                    <div class="row">
+                        <div class="col-sm-5">
+                            <label class="control-label col-sm-4" " for="location">Op locatie</label>
+                            <div class="col-sm-8">
+                                @MyFilters.LocationDropdown("location")
                             </div>
                         </div>
                     </div>
 
-                    <div class="panel-body" id="tipsToChangecontainer" style="position:relative">
-                         <div id="tipsToChange" style="display:none">result wil be here</div>
-                    </div>
+                    @*sam snapt het niet....*@
+                    <div class="row"><a>.</a></div>
 
-                    <div class="panel-footer">
-                        <button class="btn-sm btn-primary" id="loadverification">Verificatie</button>
-                        <a href="~/NgacElectrode/Index" class="btn-sm btn-success" style="float:right">Print &raquo;</a>
+                    <div class="row">
+                        <div class="col-sm-5">
+                            <label class="control-label col-sm-8" for="minwear">waar de wear groter is dan</label>
+                            <div class="col-sm-4">
+                                <input class="form-control input-sm" type="number" min="0" max="100" step="5" value="25" id="minwear" />
+                            </div>
+                        </div>
+
+                        <div class="col-sm-7">
+                            <label class="control-label col-sm-8" for="minparts">of minimum resterende stukken kleiner dan</label>
+                            <div class="col-sm-4">
+                                <input class="form-control input-sm" type="number" min="0" step="10" value="200" id="minparts" />
+                            </div>
+                        </div>
                     </div>
                 </div>
-                @****************************************************************************************************************************@
 
-                @*CHECK Hier moet een soort van bevestiging komen. user moet elke keer op refresh duwen en crossmatch met lijst van hierboven
+                <div class="panel-footer">
+                    <button class="btn-sm btn-primary" id="loadLocations">Zoek</button>
+                </div>
+            </div>
+            @****************************************************************************************************************************@
+
+            @*DO Hier word de lijst getoond met waar er moet gewisselde worden*@
+            <div class="panel panel-default" id="tipsToChangeContainer" style="display:none">
+
+                <div class="panel-heading">
+                    <div class="row">
+                        <h4 class="col-sm-6">Deze robots moeten gewisseld worden.</h4>
+                        <div class="col-sm-3" style="float:right">
+                            <input class="form-control input-sm" type="datetime-local" id="changeStartlistDatepicker" />
+                        </div>
+                    </div>
+                </div>
+
+                <div class="panel-body" id="tipsToChangecontainer" style="position:relative">
+                    <div id="tipsToChange" style="display:none">result wil be here</div>
+                </div>
+
+                <div class="panel-footer">
+                    <button class="btn-sm btn-primary" id="loadverification">Verificatie</button>
+                    <button class="btn-sm btn-success" id="printTipsToChange" style="float:right">Print &raquo;</button>
+                </div>
+            </div>
+            @****************************************************************************************************************************@
+
+            @*CHECK Hier moet een soort van bevestiging komen. user moet elke keer op refresh duwen en crossmatch met lijst van hierboven
                 gebruik refernetie timestime van hierboven.*@
-                <div class="panel panel-default" id="tipsChangedContainer" style="display:none">
+            <div class="panel panel-default" id="tipsChangedContainer" style="display:none">
 
-                    <div class="panel-heading">
-                        <div class="row">
-                            <h4 class="col-sm-6">Deze wissels zijn gedetecteerd.</h4>
-                            <div class="col-sm-3" style="float:right">
-                                <input class="form-control input-sm" type="datetime-local" id="changeDonelistDatepicker" />
-                            </div>
+                <div class="panel-heading">
+                    <div class="row">
+                        <h4 class="col-sm-6">Deze wissels NIET zijn gedetecteerd.</h4>
+                        <div class="col-sm-3" style="float:right">
+                            <input class="form-control input-sm" type="datetime-local" id="changeDonelistDatepicker" />
                         </div>
                     </div>
-
-                    <div class="panel-body" id="tipsChangedcontainer" style="position:relative">
-                        <div id="tipsChanged" style="display:none">result wil be here</div>
-                    </div>
-
-                    <div class="panel-footer">
-                        <button class="btn-sm btn-primary" id="loadverification">Refresh</button>
-                    </div>
                 </div>
-                @****************************************************************************************************************************@
+
+                <div class="panel-body" id="tipsChangedcontainer" style="position:relative">
+                    <div id="tipsChanged" style="display:none">result wil be here</div>
+                </div>
+
+                <div class="panel-footer">
+                    <button class="btn-sm btn-primary" id="RefreshVerification">Refresh</button>
+                </div>
+            </div>
+            @****************************************************************************************************************************@
         </div>
 
         <div class="panel-footer">
-            <a href="~/NgacElectrode/Index" class="btn-xs btn-primary" style="float:right">Electrode home &raquo;</a>
+            <a href="~/NgacElectrode/Index" class="btn-xs btn-primary">Electrode home &raquo;</a>
         </div>
     </div>
 </div>
@@ -153,7 +153,7 @@
 //loading of second container and table "change check"
     var urlTipsChanged = '@Url.Action("_TipsChanged")';
     var spinner2 = new Spinner();
-    $('#loadverification').click(function () {
+    $('#loadverification, #RefreshVerification').click(function () {
         //disable buttons
         $('#loadverification').attr("disabled", true);
         //clear table if its there
@@ -188,4 +188,15 @@
                 }
             );
     })
+</script>
+
+
+@*print.js*@
+<script type="text/javascript">
+        $('#printTipsToChange').click(function () {
+            console.log("print started");
+            $('#tipsToChangeContainer').printThis({
+                header: "<h1>Tipchange plan</h1>"
+            });
+        });
 </script>
