--- a/EqUiWebUi/Views/Gadata/SupervisieWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/SupervisieWebgrid.cshtml
@@ -69,5 +69,8 @@
         ListenToModal('#myModal');
         //enable polling for new data
         PolFordata(5, '@Html.Raw(ViewBag.DataTimestamp)', '@Url.Action("SupervisiecheckNewData")');
+        //hide the navbar and move body content up
+        $(".navbar-fixed-top").autoHidingNavbar().hide();
+        $("#allcontent").animate({ "margin-top": "-60px" }, "fast");
     });
 </script>
