--- a/EqUiWebUi/Views/Maximo/Index.cshtml
+++ b/EqUiWebUi/Views/Maximo/Index.cshtml
@@ -1,21 +1,31 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Maximo";
 }
 <div class="container body-content">
-    <h2>Index</h2>
+    <div class="panel panel-default">
+        <h4>Maximo</h4>
+        <div class="panel-body">
+            <p>
+                <a href="~/Maximo/WoDetails?wonum=9709594" class="btn btn-primary btn-sm">WoDetails &raquo;</a>
+                Workoderdetails
+            </p>
+
+            <p>
+                <a href="~/Maximo/workorders?location=53100R01" class="btn btn-primary btn-sm">workorders &raquo;</a>
+                workorders on location
+            </p>
+
+            <p>
+                <a href="~/Maximo/workorders?station=A STN53%" class="btn btn-primary btn-sm">workorders &raquo;</a>
+                workorders on station
+            </p>
+
+            <p>
+                <a href="~/Difftable/Index" class="btn btn-primary btn-sm">QueryDiffer &raquo;</a>
+                Concept om data van maximo op verschillende tijdstippen te vergelijken
+            </p>
+
+
+        </div>
+    </div>
 </div>
-
-    <script type="text/javascript">
-        $(document).ready(function () {
-            console.log("hit");
-
-            $(".navbar-fixed-top").animate({ "margin-top": "-62px" }, "fast");
-            $(".container").animate({ "margin-top": "5px" }, "fast");
-
-            //  $(".navbar-fixed-top").animate({ "margin-top": "0px" }, "fast");
-            //  $("#content").animate({ "margin-top": "80px" }, "fast");
-
-
-        });
-    </script>
-
