--- a/EqUiWebUi/Views/Maximo/workorders.cshtml
+++ b/EqUiWebUi/Views/Maximo/workorders.cshtml
@@ -2,18 +2,72 @@
 @{
     ViewBag.Title = "Workorders";
 }
-<script src="~/Scripts/jquery-3.2.1.js"></script>
-<script type="text/javascript">
+<div>
+    <p></p>
+    <div class="panel-body">
+        <table>
+            <tr>
+                <td>
+                    <p style="font-size: 12px">
+                        Workorders for location:<a href="#" data-toggle="tooltip" data-placement="bottom" title="@Model.location">'@ViewBag.locationInfo'</a>
+                        Station:<a href="#" data-toggle="tooltip" data-placement="bottom" title="@Model.station">'@ViewBag.stationInfo'</a>
+                    </p>
+                </td>
 
+                <td style="padding-left:50px;"> </td>
+
+                <td>
+                    @Html.CheckBoxFor(m => m.b_ciblings, new { onclick = "cb_click();" }) Include ciblings
+                </td>
+
+                <td style="padding-left:25px;"> </td>
+
+                <td>
+                    @Html.CheckBoxFor(m => m.b_preventive, new { onclick = "cb_click();" }) Include workordertype: PP,PCI, WSCH
+                </td>
+
+            </tr>
+        </table>
+    </div>
+
+    <p></p>
+
+    <div class="panel panel-default">
+
+        <div class="panel-body">
+            <p>@ViewBag.error</p>
+            @Html.AjaxGrid(Url.Action("_workordersOnLocation",
+                         new
+                         {
+                             location = Model.location,
+                             station = Model.station,
+                             b_ciblings = Model.b_ciblings,
+                             b_preventive = Model.b_preventive
+                         }))
+
+        </div>
+
+        <p></p>
+        @*info model in page load wo details *@
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <div id="woDetailsPartial">Click on a row for more details about a workorder</div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script type="text/javascript">
     @*run on doc ready *@
     $(document).ready(function () {
-        //hide the navbar in this view 
-        $('.navbar').hide();
+        //hide the navbar and move body content up
+        $(".navbar-fixed-top").autoHidingNavbar().hide();
+        $("#allcontent").animate({ "margin-top": "-60px" }, "fast");
         //set ceckbox value to model on start
         document.getElementById("b_ciblings").checked = @Json.Encode(Model.b_ciblings);
         document.getElementById("b_preventive").checked = @Json.Encode(Model.b_preventive);
         //set optional font size. (to support HD and 4K monitors  )
-        setFont();
+        SetTableFont('@ViewBag.fontSize');
         //subscribe to row clicked events
         $('.mvc-grid').mvcgrid({
             rowClicked: function (row, data, e) {
@@ -51,72 +105,5 @@
                 },
         });
     };
-
-    @* Set font style to viewbag data*@
-    function setFont() {
-        var myElements = document.querySelectorAll(".table");
-        for (var i = 0; i < myElements.length; i++) {
-            myElements[i].style.fontSize =  @ViewBag.fontSize + "px";
-        }
-    };
 </script>
-
-
-@*HTML page*@
-<div>
-    <p></p>
-
-    <div class="panel-body">
-        <table>
-            <tr>
-                <td>
-                    <p style="font-size: 12px"> 
-                        Workorders for location:<a href="#" data-toggle="tooltip" data-placement="bottom" title="@Model.location">'@ViewBag.locationInfo'</a>
-                        Station:<a href="#" data-toggle="tooltip" data-placement="bottom" title="@Model.station">'@ViewBag.stationInfo'</a>
-                    </p>
-                </td>
-
-                <td style="padding-left:50px;"> </td>
-
-                <td>
-                    @Html.CheckBoxFor(m => m.b_ciblings, new { onclick = "cb_click();" }) Include ciblings
-                </td>
-
-                <td style="padding-left:25px;"> </td>
-
-                <td>
-                    @Html.CheckBoxFor(m => m.b_preventive, new { onclick = "cb_click();" }) Include workordertype: PP,PCI, WSCH
-                </td>
-
-            </tr>
-        </table>
-    </div>
- 
-    <p></p>
-
-    <div class="panel panel-default">
-
-        <div class="panel-body">
-            <p>@ViewBag.error</p>
-            @Html.AjaxGrid(Url.Action("_workordersOnLocation",
-                    new
-                    {
-                        location = Model.location,
-                        station = Model.station,
-                        b_ciblings = Model.b_ciblings,
-                        b_preventive = Model.b_preventive
-                    }))
-            
-        </div>
-
-        <p></p>
-        @*info model in page load wo details *@
-        <div class="panel panel-default">
-            <div class="panel-body">
-                <div id="woDetailsPartial">Click on a row for more details about a workorder</div>
-            </div>
-        </div>
-    </div>
-</div>
-
 
