playing with 3d.js
simple bar graph working now but a lot more to learn

--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -39,6 +39,10 @@
                 <a href="~/Gadata/Stowebgrid" class="btn btn-primary btn-sm">STO &raquo;</a>
                 Data van de PLC actieve storingen
             </p>
+            <p>
+                <a href="http://gensvw2107/cmactapp" class="btn btn-primary btn-sm">cmaCTapp &raquo;</a>
+                Tool van IE om Cycle times te bekijken.
+            </p>
 
         </div>
     </div>
