--- a/EqUiWebUi/Views/NgacElectrode/_TipsToChange.cshtml
+++ b/EqUiWebUi/Views/NgacElectrode/_TipsToChange.cshtml
@@ -6,6 +6,7 @@
                         columns.Add(c => c.pWear).Titled("%wear");
                         columns.Add(c => c.nRspots).Titled("Resterende Spots");
                         columns.Add(c => c.nRcars).Titled("Resterende Stukken");
+                        columns.Add(c => c.nDress).Titled("Aantal dresses");
                     }).Empty("Did not find anything").Css("table-hover")
 
 @*subscrible this table to events*@
