--- a/EqUiWebUi/Views/Chart/Index.cshtml
+++ b/EqUiWebUi/Views/Chart/Index.cshtml
@@ -10,152 +10,13 @@
         <div class="panel-body">
             <p>
                 <a href="~/Chart/index" class="btn btn-primary btn-sm">BarChart &raquo;</a>
-                BarChart with grouping
+                Chart index
             </p>
 
+            @Html.Partial("_getErrorTrend")
 
-            <div id="grafiek" style="width:100%; ">
-
-                <canvas id="canvasStartStart"></canvas>
-
-            </div>
-
-        </div>
-
-        <div class="panel-footer">
-            <button id="test" class="btn-danger">Test</button>
         </div>
     </div>
 </div>
 
 
-<style>
-
-    .bar {
-        fill: steelblue;
-    }
-
-        .bar:hover {
-            fill: brown;
-        }
-
-    .axis {
-        font: 10px sans-serif;
-    }
-
-        .axis path,
-        .axis line {
-            fill: none;
-            stroke: #000;
-            shape-rendering: crispEdges;
-        }
-
-    .x.axis path {
-        display: none;
-    }
-</style>
-
-<script src="~/Scripts/d3/d3.js"></script>
-<script src="~/Scripts/d3/Chart.bundle.js"></script>
-
-<script>
-    function buildchart(table, chartName) {
-        var vLabels = new Array();
-        var vData = new Array();
-
-        for (var i = table.length - 1; i >= 0; i--) {
-            vLabels.push(table[i].timestamp);
-            vData.push(table[i].count)
-        }
-
-        var config = {
-            type: 'bar',
-            data: {
-                labels: vLabels,
-                datasets: [{
-                    yAxisID: 'A',
-                    position: 'left',
-                    label: "Count of fault",
-                    //backgroundColor: color(255,255,255),
-                    //borderColor: AliceBlue,
-                    data: vData,
-                    fill: false,
-                }
-                ]
-            },
-            options: {
-                responsive: true,
-                title: {
-                    display: true,
-                    text: chartName
-                },
-                tooltips: {
-                    mode: 'index',
-                    intersect: false,
-                },
-                hover: {
-                    mode: 'nearest',
-                    intersect: true
-                },
-                scales: {
-                    xAxes: [{
-                        display: true,
-                        scaleLabel: {
-                            display: true,
-                            labelString: '[Time]'
-                        }
-                    }],
-                    yAxes: [{
-                        display: true,
-                        id: 'A',
-                        ticks: {
-                            beginAtZero: true,
-                           // steps: 10,
-                           // stepValue: 5,
-                           //max: 200,
-                        },
-                        scaleLabel: {
-                            display: true,
-                            labelString: ' [Count]'
-                        }
-                    }]
-                }
-            }
-        };
-
-        $('#canvasStartStart').remove(); // this is my <canvas> element
-        $('#grafiek').append("<canvas style='position:fixed' id='canvasStartStart'><canvas>");
-        var ctx = document.getElementById("canvasStartStart").getContext("2d");
-        window.myLine = new Chart(ctx, config);
-    }
-</script>
-
-<script>
-    function getChartData(_location, _errornum, _logtekst, _logtype, _groupType) {
-        console.log("request start");
-        $.ajax({
-            type: 'GET',
-            url: "/chart/_getData?location=" + _location + "&errornum=" + _errornum + "&logtekst=" + _logtekst + "&logtype=" + _logtype + "&grouptType=" + _groupType,
-            data: JSON.stringify(),
-            success: function (returnPayload) {
-                console.log("json result");
-                console.log(returnPayload);
-                buildchart(returnPayload, "chartName");
-                console && console.log("request succeeded");;
-            },
-            error: function (xhr, ajaxOptions, thrownError) {
-                console && console.log("request failed");
-            },
-            dataType: "json",
-            contentType: "application/json",
-            processData: false,
-            async: true
-        });
-    };
-</script>
-
-<script>
-    $("#test").click(function () {
-        getChartData("26010R02", 24170, " Pump 1 not ready $IN[377] = OFF","BREAKDOWN", 4);
-    });
-</script>
