--- a/EqUiWebUi/Views/Home/Rendersite.cshtml
+++ b/EqUiWebUi/Views/Home/Rendersite.cshtml
@@ -7,6 +7,7 @@
                 <iframe src="@ViewBag.redirectURL" allowfullscreen></iframe>
             </div>
         </div>
+    </div>
 </div>
 
 <footer>
