--- a/EqUiWebUi/Views/NgacElectrode/PlanTipChange.cshtml
+++ b/EqUiWebUi/Views/NgacElectrode/PlanTipChange.cshtml
@@ -42,11 +42,26 @@
                         </div>
 
                         <div class="col-sm-7">
-                            <label class="control-label col-sm-8" for="minparts">of minimum resterende stukken kleiner dan</label>
+                            <label class="control-label col-sm-8" for="minparts">minimum resterende stukken kleiner dan</label>
                             <div class="col-sm-4">
-                                <input class="form-control input-sm" type="number" min="0" step="10" value="200" id="minparts" />
+                                <input class="form-control input-sm" type="number" min="0"  step="10" value="200" id="minparts" />
                             </div>
                         </div>
+
+                    </div>
+
+                    @*sam snapt het niet....*@
+                    <div class="row"><a>.</a></div>
+
+                    <div class="row">
+                        <div class="col-sm-5">
+                            <label class="control-label col-sm-8" for="maxdress">aantal keer gefreest groter dan</label>
+                            <div class="col-sm-4">
+                                <input class="form-control input-sm" type="number" min="0" max="200" step="10" value="120" id="maxdress" />
+                            </div>
+                        </div>
+
+                        <div class="col-sm-7"></div>
                     </div>
                 </div>
 
@@ -168,12 +183,14 @@
             var locationfilter = $('#location').val();
             var minwear = $('#minwear').val();
             var minparts = $('#minparts').val();
+            var maxdress = $('#maxdress').val();
             var reportTimestamp = $("#changelistDatepicker").val();
             $("#tipsChanged").load(urlTipsChanged,
                 {
                     locationFilter: locationfilter,
                     minWear: minwear,
-                    minParts: minparts
+                    minParts: minparts,
+                    maxDress: maxdress
                 },
                 //this runs when load done
                 function () {
