--- a/EqUiWebUi/Views/NgacElectrode/_TipsChanged.cshtml
+++ b/EqUiWebUi/Views/NgacElectrode/_TipsChanged.cshtml
@@ -2,12 +2,13 @@
 @model IEnumerable<EqUiWebUi.Models.TipMonitor>
 
 @Html.Grid(Model).Named("TipsChangedTable").Build(columns =>
-                    {
-                        columns.Add(c => c.Robot).Titled("Robot").InitialSort(GridSortOrder.Asc);
-                        columns.Add(c => c.pWear).Titled("%wear");
-                        columns.Add(c => c.nRspots).Titled("Resterende Spots");
-                        columns.Add(c => c.nRcars).Titled("Resterende Stukken");
-                    }).Empty("Did not find anything").Css("table-hover")
+{
+    columns.Add(c => c.Robot).Titled("Robot").InitialSort(GridSortOrder.Asc);
+    columns.Add(c => c.pWear).Titled("%wear");
+    columns.Add(c => c.nRspots).Titled("Resterende Spots");
+    columns.Add(c => c.nRcars).Titled("Resterende Stukken");
+    columns.Add(c => c.nDress).Titled("Aantal dresses");
+}).Empty("Did not find anything").Css("table-hover")
 
 @*subscrible this table to events*@
 <script>
