--- a/EqUiWebUi/Views/Chart/_getErrorTrend.cshtml
+++ b/EqUiWebUi/Views/Chart/_getErrorTrend.cshtml
@@ -65,8 +65,8 @@
         var vData = new Array();
 
         for (var i = table.length - 1; i >= 0; i--) {
-            vLabels.push(table[i].timestamp);
-            vData.push(table[i].count)
+            vLabels.push(table[i].Label);
+            vData.push(table[i].Count)
         }
 
         var config = {
